--- a/css/screens/index.css
+++ b/css/screens/index.css
@@ -1,33 +1,67 @@
-.index-title {
-  width: 50%;
-  margin: 0 auto;
-  text-align: center;
+@charset "utf-8";
+@import url("https://fonts.googleapis.com/css2?family=Nanum+Myeongjo:wght@400;700;800&display=swap");
+nav {
+  height: 50px;
+  border-bottom: 1px solid rgba(52, 73, 94, 0.6);
 }
-.index-title img {
-  vertical-align: top;
-  width: 100%;
-  margin: 0 auto;
+nav ul {
+  display: flex;
+  justify-content: space-around;
+}
+nav ul li {
+  line-height: 50px;
+  transition: color 0.3s;
+}
+nav ul li:hover {
+  color: #ffffff;
 }
 .index-main {
-  width: 50%;
-  margin: 0 auto;
+  width: 100%;
+  margin: 100px auto 0;
   text-align: center;
 }
+span {
+  font-size: 1.8em;
+  text-shadow: 1px 1px 1px rgba(45, 52, 54, 0.5);
+}
+h1 {
+  font-size: 3rem;
+  margin: 10px 0 20px;
+  text-shadow: 2px 2px 2px rgba(45, 52, 54, 0.5);
+}
 .index-main img {
-  width: 100%;
-  margin: 0 auto;
+  width: 360px;
+  margin: 10px auto 15px;
+  border-radius: 30%;
+  background-color: rgba(255, 255, 255, 0.3);
 }
 .index-main__startBtn {
-  margin-top: 15px;
-  width: 40%;
-  background-color: #c6c2d4;
+  margin-top: 25px;
+  width: 340px;
+  height: 50px;
+  background-color: rgba(255, 255, 255, 0.3);
   border: none;
-  color: #3a325c;
-  font-size: 2em;
-  box-shadow: 2px 2px 2px rgba(57, 36, 59, 0.4);
+  box-shadow: 2px 2px 2px rgba(45, 52, 54, 0.5);
 }
 .index-main__startBtn:hover {
   cursor: pointer;
-  background-color: #3a325c;
-  color: #c6c2d4;
+  background-color: #34495e;
+  color: #ecf0f1;
+}
+
+@media screen and (max-width: 480px) {
+  .index-main {
+    width: 100%;
+    margin: 50px auto 0;
+  }
+  span,
+  h1 {
+    font-size: 2em;
+  }
+  .index-main img {
+    width: 260px;
+  }
+  .index-main__startBtn {
+    width: 250px;
+  }
 }
