--- a/css/styles.css
+++ b/css/styles.css
@@ -8,3 +8,15 @@
   margin: 0;
   padding: 0;
 }
+body {
+  background-color: #f6e58d;
+  font-family: "Nanum Myeongjo", sans-serif;
+  color: rgb(45, 52, 54);
+}
+ul {
+  list-style: none;
+}
+a {
+  text-decoration: none;
+  color: inherit;
+}
