--- a/css/screens/index.css
+++ b/css/screens/index.css
@@ -32,14 +32,14 @@ h1 {
 .index-main img {
   width: 360px;
   margin: 10px auto 15px;
-  border-radius: 30%;
-  background-color: rgba(255, 255, 255, 0.3);
+  border-radius: 100%;
+  background-color: #fff1c3;
 }
 .index-main__startBtn {
   margin-top: 25px;
   width: 340px;
   height: 50px;
-  background-color: rgba(255, 255, 255, 0.3);
+  background-color: #fff1c3;
   border: none;
   box-shadow: 2px 2px 2px rgba(45, 52, 54, 0.5);
 }
