--- a/css/styles.css
+++ b/css/styles.css
@@ -1,9 +1,8 @@
 @charset "utf-8";
-/* Components */
-@import "components/advertisement.css";
 /* Screens */
 @import "screens/index.css";
 @import "screens/survey.css";
+@import "screens/result.css";
 * {
   margin: 0;
   padding: 0;
