--- a/css/screens/result.css
+++ b/css/screens/result.css
@@ -1,12 +1,66 @@
-@media screen and (max-width: 600px) {
-  header {
-    width: 100%;
-    margin: 20px auto 0;
-  }
-  header h2 {
-    font-size: 14px;
-  }
-  header span {
-    width: 200px;
-  }
+.result-screen {
+  width: 100%;
+  margin: 20px auto 0;
+}
+.result-screen img {
+  background-color: #ffffff;
+  border-radius: 50%;
+  margin-bottom: 10px;
+}
+.result-screen__title span {
+  display: block;
+  font-size: 22px;
+  margin-bottom: 5px;
+  text-shadow: none;
+  font-weight: bold;
+  color: rgba(44, 62, 80, 0.8);
+}
+.result-screen__title p {
+  font-size: 35px;
+  font-weight: bold;
+  text-shadow: 2px 2px 2px rgba(45, 52, 54, 0.5);
+}
+.result-screen__text {
+  width: 350px;
+  margin: 40px auto 20px;
+  text-align: left;
+  font-family: "Noto Sans KR", sans-serif;
+}
+.result-screen__text li {
+  width: 100%;
+  margin: 0 auto 7px;
+  list-style: circle;
+  font-size: 18px;
+}
+.OtherDogs {
+  width: 100%;
+  margin: 50px auto 10px;
+  display: flex;
+  justify-content: center;
+}
+.recommendedDogs,
+.notRecommendedDogs {
+  width: 250px;
+}
+.OtherDogs h3 {
+  display: block;
+  font-size: 20px;
+  margin-bottom: 5px;
+  font-weight: bold;
+  color: rgba(44, 62, 80, 0.8);
+}
+.OtherDogs span {
+  display: block;
+  font-size: 28px;
+  font-weight: bold;
+  text-shadow: 2px 2px 2px rgba(45, 52, 54, 0.3);
+}
+.OtherDogs img {
+  width: 200px;
+}
+.perforatedLine span {
+  display: block;
+  width: 350px;
+  margin: 30px auto;
+  border: 0.05px solid rgba(255, 255, 255, 0.5);
 }
