--- a/css/styles.css
+++ b/css/styles.css
@@ -3,6 +3,7 @@
 @import "screens/index.css";
 @import "screens/survey.css";
 @import "screens/result.css";
+@import "screens/loading.css";
 /* font */
 @import url("https://fonts.googleapis.com/css2?family=Nanum+Myeongjo:wght@400;700;800&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100;300;400;500;700;900&display=swap");
