--- a/css/screens/survey.css
+++ b/css/screens/survey.css
@@ -53,7 +53,9 @@ button {
   background-color: #34495e;
   color: #ecf0f1;
 }
-
+.check:active {
+  background-color: #f6e58d;
+}
 @media screen and (max-width: 600px) {
   header {
     width: 100%;
