--- a/css/screens/survey.css
+++ b/css/screens/survey.css
@@ -50,14 +50,12 @@ button {
 }
 .check:hover {
   cursor: pointer;
+}
+.check:active {
   background-color: #34495e;
   color: #ecf0f1;
 }
-.check:visited {
-  background-color: #f6e58d;
-  border: 0;
-  outline: 0;
-}
+
 @media screen and (max-width: 600px) {
   header {
     width: 100%;
