--- a/css/screens/survey.css
+++ b/css/screens/survey.css
@@ -54,6 +54,8 @@ button {
 .check:active {
   background-color: #34495e;
   color: #ecf0f1;
+  border: 0;
+  outline: 0;
 }
 
 @media screen and (max-width: 600px) {
