survey__btn-webkit

--- a/css/screens/survey.css
+++ b/css/screens/survey.css
@@ -1,5 +1,10 @@
-input[type="button"] {
+input {
   -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+}
+*:focus {
+  outline: none;
 }
 header {
   height: 50px;
