--- a/css/screens/survey.css
+++ b/css/screens/survey.css
@@ -28,10 +28,17 @@ main {
   text-align: center;
 }
 .question-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
   font-size: 3rem;
   font-weight: bold;
   padding: 40px 0 20px;
   line-height: 1.5;
+}
+.question-container span {
+  display: block;
+  font-size: 0.5em;
 }
 button {
   border: 0;
