--- a/css/screens/blog.css
+++ b/css/screens/blog.css
@@ -58,6 +58,7 @@ main {
   align-items: flex-start;
   padding: 15px 0;
   justify-content: space-between;
+  position: relative;
 }
 aside {
   width: 20%;
@@ -121,6 +122,25 @@ footer {
   color: white;
   font-size: 0.8em;
   text-align: center;
+}
+#back-to-top {
+  position: fixed;
+  right: 3em;
+  bottom: 3em;
+  background-color: #2d3436;
+  color: white;
+  padding: 15px;
+  border-radius: 5px;
+  cursor: pointer;
+  font-weight: 700;
+  transition: 0.3s;
+  opacity: 0;
+}
+#back-to-top:hover {
+  padding: 15px 45px;
+}
+#back-to-top.visible {
+  opacity: 1;
 }
 @media screen and (max-width: 1023px) {
   header,
