--- a/css/screens/blog.css
+++ b/css/screens/blog.css
@@ -124,6 +124,7 @@ footer {
   text-align: center;
 }
 #back-to-top {
+  -webkit-appearance: none;
   position: fixed;
   right: 3em;
   bottom: 3em;
@@ -136,6 +137,8 @@ footer {
   transition: 0.3s;
   opacity: 0;
   box-shadow: 1.5px 1.5px 10px rgba(255, 255, 255, 0.45),
+    -1.5px -1.5px 10px rgba(255, 255, 255, 0.45);
+  -webkit-box-shadow: 1.5px 1.5px 10px rgba(255, 255, 255, 0.45),
     -1.5px -1.5px 10px rgba(255, 255, 255, 0.45);
 }
 #back-to-top:hover {
