--- a/css/screens/blog.css
+++ b/css/screens/blog.css
@@ -169,8 +169,17 @@ footer {
     border-bottom: 2px solid #2d3436;
   }
   section {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     width: 100%;
     padding: 20px;
+  }
+
+  section p {
+    width: 80%;
+    display: flex;
+    justify-content: center;
   }
   .profile {
     justify-content: center;
